CSS 2.1 failure: border-collapse-offset-002.htm fails https://bugs.webkit.org/show_bug.cgi?id=71705

Source/WebCore:

Table captions are implemented as children of the table but have a special
requirement to expand to the full width of the table rather than just the 'available'
width, i.e. the full width minus padding and borders.

To accomodate this create a RenderTableCaption object that reimplements containingBlockLogicalWidthForContent()
to return the full width of the containing block (i.e. the table) rather than the available width.

Reviewed by Antti Koivisto.

* CMakeLists.txt: Add RenderTableCaption.[cpp|h]
* GNUmakefile.list.am: Add RenderTableCaption.[cpp|h]
* Target.pri: Add RenderTableCaption.[cpp|h]
* WebCore.gypi: Add RenderTableCaption.[cpp|h]
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addChildIgnoringAnonymousColumnBlocks): Use RenderTableCaption
* rendering/RenderObject.cpp:
(WebCore::RenderObject::createObject): Add RenderTableCaption.[cpp|h]
(WebCore::RenderObject::addChild): ditto
* rendering/RenderObject.h:
(WebCore::RenderObject::isTableCaption):
* rendering/RenderTable.cpp:
(WebCore::RenderTable::addChild):
* rendering/RenderTable.h:
* rendering/RenderTableCaption.cpp: Added.
(WebCore::RenderTableCaption::RenderTableCaption): Implement RenderTableCaption
(WebCore::RenderTableCaption::~RenderTableCaption):
(WebCore::RenderTableCaption::containingBlockLogicalWidthForContent): Return the containing block's full width rather than it's available width.
* rendering/RenderTableCaption.h: Added.
(WebCore::RenderTableCaption::isTableCaption):
(WebCore::toRenderTableCaption):

LayoutTests:

Table captions now use the width of the table rather than the width of the table minus
the borders. This allows captions to center accurately but unfortunately a lot of mozilla
table tests need to be rebaselined as many of them use captions for explaining the purpose
of individual test files!

Add border-collapse-offset-002.htm which now renders correctly.

Affected tables/mozilla tests are rebaselined in a follow-up patch.

Reviewed by Antti Koivisto.

* css2.1/20110323/border-collapse-offset-002.htm: Added.
* platform/chromium-linux-x86/css2.1/20110323/border-collapse-offset-002-expected.png: Added.
* platform/chromium-linux-x86/css2.1/20110323/border-collapse-offset-002-expected.txt: Added.
* platform/chromium-linux/fast/dom/HTMLTableElement/colSpan-expected.png:
* platform/chromium-linux/fast/dom/HTMLTableElement/createCaption-expected.png:
* platform/chromium-win/fast/css/bidi-override-in-anonymous-block-expected.txt:
* platform/chromium-win/fast/dom/HTMLTableElement/colSpan-expected.txt:
* platform/chromium-win/fast/dom/HTMLTableElement/createCaption-expected.txt:
* platform/mac/fast/repaint/table-section-repaint-expected.txt:

git-svn-id: svn://svn.chromium.org/blink/trunk@100473 bbb929c8-8fbe-4397-9dbb-9b2b20218538