third_party/WebKit/Source/WebCore/rendering/RenderingAllInOne.cpp
@@ -93,6 +93,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "RenderSlider.cpp"
 #include "RenderSummary.cpp"
 #include "RenderTable.cpp"
+#include "RenderTableCaption.cpp"
 #include "RenderTableCell.cpp"
 #include "RenderTableCol.cpp"
 #include "RenderTableRow.cpp"
